--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@
     padding: 0;
     margin: 0;
 }
-
+/* global preset that applys to everything */
 body {
     background-color: #d9dcd6;
 }
-
+/* the color of the entire background on the webpage */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -19,12 +19,12 @@ body {
     display: inline-block;
     font-size: 48px;
 }
-
+/* font size of header logo */
 .header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+.header section {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header section ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header section ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -58,12 +58,12 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/*this creates the main landing page image*/
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/*the float right and float right and positioning of the image */
 .float-right {
     float: right;
     margin-left: 25px;
@@ -74,7 +74,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/*Used for the search engine content section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -85,7 +85,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* The positioning of the side bar backgroung that contains the benifit section */
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -95,7 +95,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/* The spacing between each benifit title and image */
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
@@ -105,35 +105,35 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* Targeting the lead benifit to design the alighnment */
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* Targeting the brand benifit to design the alighment */
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* Targeting the cost benifit to design the alignment */
 .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* This is for the postion and sizing the the image for the lead benifit section */
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* This is for the postion and sizing the the image for the brand benifit section */
 .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* This is for the postion and sizing the the image for the cost benifit section */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -142,7 +142,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* This is positioning, size, font, and the color of the background of the search-engine-optimization section */
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -151,7 +151,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* This is positioning, size, font, and the color of the background of the online-repuation-management */
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -160,41 +160,42 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* This is positioning, size, font, and the color of the background of the social-media-markenting */
 .search-engine-optimization img {
     max-height: 200px;
 }
-
+/* Limiting the size of the image inside the search-engine-optimization */ 
 .online-reputation-management img {
     max-height: 200px;
 }
-
+/* Limiting the size of the image inside the online-reputation-management */ 
 .social-media-marketing img {
     max-height: 200px;
 }
-
+/* Limiting the size of the image inside the social-media-marketing */ 
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* The spacing and font size the search-engine-optimization section */
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* The spacing and font size the online-reputation-management section */
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* The spacing and font size the social-media-marketing section */
 .footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
+/* Clear is telling the footer it must below all the other elements. the footer is also telling the text to be cnetered and what font it wants it to be */
 .footer h2 {
     font-size: 20px;
 }
+/* Telling the footer what it wants the text size to be */
